--- a/client/src/Card.css
+++ b/client/src/Card.css
@@ -1,39 +1,67 @@
 .card {
+    position: absolute;
     display: inline-flex;
     justify-content: center;
     align-content: center;
     flex-direction: column;
     width: 10em;
     height: 18em;
-    margin: 20px 20px 20px 20px;
-    border: 10px #FAFAFA solid;
+    border: 0px solid rgba(255, 255, 255, 0.788);
     border-radius: 10px;
     box-shadow: #00000044 0px 0px 5px;
     z-index: 0;
+    transition: transform 0.15s ease-out;
+    backdrop-filter: brightness(150%) blur(10px);
+    user-select: none;
+    padding-left: 10px;
+    padding-right: 10px;
 }
-.card:hover{
-    filter: brightness(200%);
+
+.card.selected{
+    box-shadow: #ffffff 0px 0px 10px 2px;
 }
 
 .card-red {
-    background-color: #DD0000;
+    background: linear-gradient(to top right, #c7201d, #e35d5b);
 }
 
 .card-blue {
-    background-color: #0000DD;
+    background: linear-gradient(to top right, #00d2ff, #3a7bd5);
 }
 
 .card-yellow {
-    background-color: #DDDD00;
+    background: linear-gradient(to top right, #e9b014, #f3cd35);
 }
 
 .card-green {
-    background-color: #00AA00;
+    background: linear-gradient(to top right, #348f50, #6fd356); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+.card-wildcard {
+    background: linear-gradient(to top right, #200122, #6f0000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card h1 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 4em;
     text-align: center;
     color: #FFFFFF;
-    text-shadow: #000000 0px 0px 2px;
+
+}
+
+
+.card h2.first {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
+    align-self: flex-start;
+    color: #FFFFFF;
+
+}
+
+.card h2.last {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1.5em;
+    align-self: flex-end;
+    color: #FFFFFF;
 
 }
