--- a/client/src/Deck.css
+++ b/client/src/Deck.css
@@ -1,8 +1,7 @@
 
 .deck-margins {
-    padding-left: 5em;
-    padding-right: 5em;
-    padding-top:2em;
+    margin-left: 5em;
+    margin-right: 5em;
 }
 .mydeck {
     padding-left: 20%;
@@ -10,8 +9,15 @@
 
 }
 .opponentdeck {
-    padding-left: 2em;
+    margin-left: 2em;
+    margin-right: 2em;
 }
+
+.highlight {
+    filter: brightness(1.3) drop-shadow(#ffffff 0px 0px 20px) !important;
+}
+
+
 .opponentdeck .opponent-name{
     font-size: 2em;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,5 +27,9 @@
     position: relative;
     width: 100%;
     margin: 0;
-    height: 25em;
+    height: 20em;
+}
+.deck.opponent {
+    height: 12em;
+    filter: drop-shadow(rgba(0, 0, 0, 0.289) 20px 20px 10px)
 }
