--- a/src/GameUI/Card/card.css
+++ b/src/GameUI/Card/card.css
@@ -1,129 +1,131 @@
 .card {
-    position: absolute;
-    display: inline-flex;
-    justify-content: center;
-    align-content: center;
-    flex-direction: column;
-    width: 10em;
-    height: 18em;
-    border: 0px solid rgba(255, 255, 255, 0.788);
-    border-radius: 10px;
-    box-shadow: #00000044 0px 0px 5px;
-    transition: transform 0.15s ease-out;
-    user-select: none;
-    padding-left: 10px;
-    padding-right: 10px;
+  position: absolute;
+  display: inline-flex;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+  width: 10em;
+  height: 18em;
+  border: 0px solid rgba(255, 255, 255, 0.788);
+  border-radius: 10px;
+  box-shadow: #00000044 0px 0px 5px;
+  transition: transform 0.15s ease-out;
+  user-select: none;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .inactive .card {
-    filter:saturate(0.5);
-    cursor: default !important;
+  filter: saturate(0.5);
+  cursor: default !important;
 }
 
 .mydeck .card {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .card.small {
-    width: 7em;
-    height: 12.6em;
-    border-radius: 7px;
-    padding-left: 7px;
-    padding-right: 7px;
+  width: 7em;
+  height: 12.6em;
+  border-radius: 7px;
+  padding-left: 7px;
+  padding-right: 7px;
 }
 .card.small h1 {
-    font-size: 2.8em !important;
+  font-size: 2.8em !important;
 }
 
 .card.small h2 {
-    font-size: 1.05em !important;
+  font-size: 1.05em !important;
 }
 
-
-.card.selected{
-    box-shadow: #ffffff 0px 0px 10px 2px;
-    transform: translate(0em, -8em);
+.card.selected {
+  box-shadow: #ffffff 0px 0px 10px 2px;
+  transform: translate(0em, -8em);
 }
 
 .inactive .card.selected {
-    box-shadow: none !important;
+  box-shadow: none !important;
 }
 
 .card.right {
-    transform: translate(6em, 1em);
-    rotate: 2deg;
+  transform: translate(6em, 1em);
+  rotate: 2deg;
 }
 
 .bump .card.right {
-    transform: translate(6.5em, 1em);
+  transform: translate(6.5em, 1em);
 }
 
 .card.left {
-    transform: translate(-2em, 1em);
-    rotate: -2deg;
+  transform: translate(-2em, 1em);
+  rotate: -2deg;
 }
 
 .bump .card.left {
-    transform: translate(-3em, 1em);
+  transform: translate(-3em, 1em);
 }
 
-
 .card-red {
-    background: linear-gradient(to top right, #c7201d, #e35d5b);
+  background: linear-gradient(to top right, #c7201d, #e35d5b);
 }
 
 .card-blue {
-    background: linear-gradient(to top right, #00d2ff, #3a7bd5);
+  background: linear-gradient(to top right, #00d2ff, #3a7bd5);
 }
 
 .card-yellow {
-    background: linear-gradient(to top right, #e9b014, #f3cd35);
+  background: linear-gradient(to top right, #e9b014, #f3cd35);
 }
 
 .card-green {
-    background: linear-gradient(to top right, #348f50, #6fd356); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to top right,
+    #348f50,
+    #6fd356
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card-wildcard {
-    background: linear-gradient(to top right, #200122, #6f0000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(
+    to top right,
+    #200122,
+    #6f0000
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 4em;
-    text-align: center;
-    color: #FFFFFF;
-
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 4em;
+  text-align: center;
+  color: #ffffff;
 }
 
-
 .card h2.first {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
-    align-self: flex-start;
-    color: #FFFFFF;
-
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5em;
+  align-self: flex-start;
+  color: #ffffff;
 }
 
 .card h2.last {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 1.5em;
-    align-self: flex-end;
-    color: #FFFFFF;
-
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.5em;
+  align-self: flex-end;
+  color: #ffffff;
 }
 
 @keyframes fly-away {
-    from {
-        transform: translate(0em, -8em);
-        opacity: 1;
-    }
-    to {
-        transform: translate(0em, -50em);
-        opacity: 0;
-    }
+  from {
+    transform: translate(0em, -8em);
+    opacity: 1;
+  }
+  to {
+    transform: translate(0em, -50em);
+    opacity: 0;
+  }
 }
 
 .card.fly-away {
-    animation: fly-away 0.5s ease-in;
+  animation: fly-away 0.5s ease-in;
 }
