--- a/src/Lobby/lobby.css
+++ b/src/Lobby/lobby.css
@@ -1,5 +1,43 @@
-#lobby-alert {
+#lobby-alerts {
   position: absolute;
   right: 2em;
   top: 2em;
+}
+
+.lobby {
+  background-color: transparent;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+
+.fullWidth {
+  width: 100vw;
+}
+.fullHeight {
+  height: 100vh;
+}
+.centerVertically {
+  display: flex;
+  align-items: center;
+}
+.centerHorizontally {
+  display: flex;
+  justify-content: center;
+}
+
+.lobbyBackground {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  background-image: url("../assets/lobbyBackground.jpg"); /* Attribution: Oleg Magni https://www.pexels.com/photo/white-sky-1040473/ */
+  background-size: cover;
+  filter: blur(10px) brightness(0.9);
+  transform: scale(1.1);
+  z-index: -1;
 }
