--- a/src/GameUI/gameUI.css
+++ b/src/GameUI/gameUI.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+
 #game {
   padding-top: 5em;
   background-color: #222222;
