Added a direction indicator and made active player scroll into view

--- a/src/GameUI/PlayerList/playerList.scss
+++ b/src/GameUI/PlayerList/playerList.scss
@@ -8,6 +8,8 @@
 }
 .playerList h2 {
   margin-top: 20px;
+  display: flex;
+  align-items: flex-end;
 }
 
 .players {
@@ -17,10 +19,22 @@
     scrollbar-width: thin;
     scrollbar-color: #333333 #2c2b2b ;
     scroll-snap-type: y mandatory;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
 }
 
 .players .playerInfo {
   scroll-snap-align: start;
   flex-basis: 15%;
   flex-shrink: 0;
+}
+
+.directionArrow {
+  margin-left: auto;
+  rotate: 90deg;
+  transition: transform 1s ease-in-out !important;
+}
+
+.directionArrow.reversed {
+  transform: rotate(-180deg) !important;
 }
