--- a/src/common/playerGradients.scss
+++ b/src/common/playerGradients.scss
@@ -8,8 +8,8 @@
   background: linear-gradient(to right, #e9b014, #f3cd35);
 }
 .playerGradient-4 {
-  background: linear-gradient(to right, #348f50, #6fd356
-  );}
+  background: linear-gradient(to right, #348f50, #6fd356);
+}
 .playerGradient-5 {
   background: linear-gradient(to right, #e44d26, #f16529);
 }
