--- a/src/GameUI/gameUI.css
+++ b/src/GameUI/gameUI.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
 
 #game {
   padding-top: 5em;
