added lobby code sectin in new lobby

--- a/src/New-Lobby/lobby.css
+++ b/src/New-Lobby/lobby.css
@@ -42,5 +42,8 @@
 }
 .Lobby .startText {
   font-size: 2rem;
-  font-family: Roboto;
+  font-family: "Roboto";
+}
+.textCenter {
+  text-align: center;
 }
