Integration with game backend
- Added methods to gameService
- Changed Lobby component to render GameUI directly without wrapping it in extraneous divs
- PlayerInfo component now moves to the right slightly when active
- Added methods in GameUI component to interface with gameService
- Added alerts to GameUI for error messages
- Fixed overflow with GameUI
- Made html and body elements have 100% height to prevent overflow

--- a/src/GameUI/PlayerList/PlayerInfo/playerInfo.scss
+++ b/src/GameUI/PlayerList/PlayerInfo/playerInfo.scss
@@ -6,6 +6,11 @@ $player-icon-size: 60px;
   //background-color: rgb(53, 53, 53);
   padding: 20px;
   border-radius: 10px;
+  transition: transform 0.5s ease-in-out;
+}
+
+.playerInfo.active {
+  transform: translateX(20px);
 }
 
 .playerIcon {
