--- a/src/GameUI/gameUI.css
+++ b/src/GameUI/gameUI.css
@@ -1,7 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
 
 #game {
+  overflow-y: hidden;
   padding-top: 5em;
   background-color: #222222;
   box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+}
+#game-alerts {
+  position: absolute;
+  right: 2em;
+  top: 2em;
 }
