Added a color prompt component for choosing the colors of wild/+4 cards.

--- a/src/GameUI/CardPile/cardPile.css
+++ b/src/GameUI/CardPile/cardPile.css
@@ -8,10 +8,20 @@
 }
 @keyframes slidein {
   from {
+    transform: translateX(-30em);
+  }
+}
+@keyframes slidein-left {
+  from {
     transform: translateY(30em);
   }
 }
 .cardpile .card.topcard {
   z-index: 20;
   animation: slidein 0.5s;
+}
+
+.cardpile .card.topcard.opponent {
+  z-index: 20;
+  animation: slidein-left 0.5s;
 }
