Added color prompt for wild and +4 cards, added handler in gameService.js for choosing color

--- a/src/GameUI/gameUI.css
+++ b/src/GameUI/gameUI.css
@@ -1,7 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap");
 
+html {
+  overflow: hidden;
+}
+
 #game {
-  overflow-y: hidden;
   padding-top: 5em;
   background-color: #222222;
   box-sizing: border-box;
