Added Landing page, About page, Navbar, and changed theming

--- a/src/App/app.css
+++ b/src/App/app.css
@@ -16,3 +16,16 @@
   text-align: center;
   vertical-align: middle;
 }
+
+.content {
+    background-color: #1b1b1b;
+    height: 100vh;
+    padding: 10em 30%;
+    overflow-y: scroll;
+}
+@media (max-width: 1000px) {
+ .content {
+   padding: 10em 5em;
+   overflow-y: scroll;
+ }   
+}
