--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,16 +1,18 @@
 .navbar {
     width: 100%;
+    height: 5em;
     background-color: #2C2C2C;
     display: flex;
+    flex-direction: column;
+    top: 0;
+    left: 0;
     position: fixed;
     align-items: center;
     justify-content: center;
-    flex-direction: row;
 }
 
 .navbar-nav {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: row;
     list-style: none;
@@ -31,3 +33,6 @@
     color: white;
 }
 
+.navbar img {
+    height: 4em;
+}
