--- a/src/GameUI/StackCounter/stackCounter.css
+++ b/src/GameUI/StackCounter/stackCounter.css
@@ -5,65 +5,87 @@
   padding-right: 40px;
   color: #ff0000;
   text-shadow: 0px 0px 10px #ff0000;
-  animation: shake-hard 0.4s cubic-bezier(.36,.07,.19,.97) infinite;
+  animation: shake-hard 0.4s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
 }
 
-.stackCounter.plus1, .stackCounter.plus2 {
+.stackCounter.plus1,
+.stackCounter.plus2 {
   color: #ffffff;
   text-shadow: none;
   animation: shake 2s ease infinite;
 }
 
-.stackCounter.plus3, .stackCounter.plus4 {
+.stackCounter.plus3,
+.stackCounter.plus4 {
   color: #ffd900;
   text-shadow: 0px 0px 4px #ffd900;
   animation: shake 1.2s ease infinite;
 }
 
-.stackCounter.plus5, .stackCounter.plus6, .stackCounter.plus7, .stackCounter.plus8 {
+.stackCounter.plus5,
+.stackCounter.plus6,
+.stackCounter.plus7,
+.stackCounter.plus8 {
   color: #ffa600;
   text-shadow: 0px 0px 6px #ffa600;
-  animation: shake-hard 0.8s cubic-bezier(.36,.07,.19,.97) infinite;
+  animation: shake-hard 0.8s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
 }
 
-.stackCounter.plus9, .stackCounter.plus10, .stackCounter.plus11, .stackCounter.plus12, .stackCounter.plus13, .stackCounter.plus14, .stackCounter.plus15, .stackCounter.plus16 {
+.stackCounter.plus9,
+.stackCounter.plus10,
+.stackCounter.plus11,
+.stackCounter.plus12,
+.stackCounter.plus13,
+.stackCounter.plus14,
+.stackCounter.plus15,
+.stackCounter.plus16 {
   color: #ff5100;
   text-shadow: 0px 0px 8px #ff5100;
-  animation: shake-hard 0.4s cubic-bezier(.36,.07,.19,.97) infinite;
+  animation: shake-hard 0.4s cubic-bezier(0.36, 0.07, 0.19, 0.97) infinite;
 }
 
 @keyframes shake-hard {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate(-4px, 0) rotate(2deg);
   }
-  
-  20%, 80% {
+
+  20%,
+  80% {
     transform: translate(4px, 0) rotate(5deg);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate(-4px, 0) rotate(2deg);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate(4px, 0) rotate(-2deg);
   }
 }
 
 @keyframes shake {
-  10%, 90% {
+  10%,
+  90% {
     transform: translate(-1px, 0);
   }
-  
-  20%, 80% {
+
+  20%,
+  80% {
     transform: translate(1px, 0);
   }
 
-  30%, 50%, 70% {
+  30%,
+  50%,
+  70% {
     transform: translate(-1px, 0);
   }
 
-  40%, 60% {
+  40%,
+  60% {
     transform: translate(1px, 0);
   }
 }
