--- a/src/Navbar/navbar.css
+++ b/src/Navbar/navbar.css
@@ -1,38 +1,39 @@
 .navbar {
-    width: 100%;
-    height: 5em;
-    background-color: #2C2C2C;
-    display: flex;
-    flex-direction: column;
-    top: 0;
-    left: 0;
-    position: fixed;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 5em;
+  background-color: #2c2c2c;
+  display: flex;
+  flex-direction: column;
+  top: 0;
+  left: 0;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
 }
 
 .navbar-nav {
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
-    list-style: none;
-    text-decoration: none;
-    padding: 0;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  list-style: none;
+  text-decoration: none;
+  padding: 0;
 }
 .navbar li:not(:last-child) {
-    flex: 1;
-    margin-right: 40px;
+  flex: 1;
+  margin-right: 40px;
 }
 
 .navbar a {
-    text-decoration: none;
-    color: #B4B4B4
+  text-decoration: none;
+  color: #b4b4b4;
 }
 
-.navbar a.active, .navbar a:hover {
-    color: white;
+.navbar a.active,
+.navbar a:hover {
+  color: white;
 }
 
 .navbar img {
-    height: 4em;
+  height: 4em;
 }
